--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -145,12 +143,12 @@
       "      dtype='object')\n",
       "will drop  ['location', 'status']\n",
       "Dropped columns due to dominance: ['location', 'status']\n",
-      "   age body_type drinks    drugs ethnicity  height             job  \\\n",
-      "0   22      plus  light       no     asian    75.0  Transportation   \n",
-      "1   35   average  heavy      yes     white    70.0         Service   \n",
-      "2   38      slim  light  unknown   unknown    68.0           Other   \n",
-      "3   23      slim  light  unknown     white    71.0         Student   \n",
-      "4   29       fit  light       no     asian    66.0        Creative   \n",
+      "   age body_type drinks    drugs  ethnicity  height             job  \\\n",
+      "0   22      plus  light       no  not white    75.0  Transportation   \n",
+      "1   35   average  heavy      yes      white    70.0         Service   \n",
+      "2   38      slim  light  unknown  not white    68.0           Other   \n",
+      "3   23      slim  light  unknown      white    71.0         Student   \n",
+      "4   29       fit  light       no  not white    66.0        Creative   \n",
       "\n",
       "  orientation     religion sex      sign smokes   diet_type diet_strictness  \\\n",
       "0    straight  agnosticism   m    gemini    yes    anything          strict   \n",
@@ -345,12 +343,19 @@
     "#print(data.ethnicity.unique())\n",
     "\n",
     "def get_primary_race(race):\n",
+    "    temp = ''\n",
     "    if race == '' or race == 'unknown':\n",
-    "        return 'unknown'\n",
+    "        temp = 'unknown'\n",
     "    else:\n",
-    "        return race.split(',')[0].strip().lower()\n",
+    "        temp = race.split(',')[0].strip().lower()\n",
+    "\n",
+    "    if temp == 'white':\n",
+    "        return temp\n",
+    "    else: \n",
+    "        return 'not white' \n",
     "\n",
     "data['ethnicity'] = data['ethnicity'].apply(get_primary_race)\n",
+    "    \n",
     "\n",
     "#print(data.ethnicity.unique())\n",
     "\n",
@@ -452,8 +457,6 @@
     "}\n",
     "\n",
     "data['orientation'] = data['orientation'].map(orientation_map).fillna('unknown')\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "#pets\n",
@@ -659,7 +662,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "#Helper module with funtions\n",
@@ -696,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -722,16 +729,8 @@
       "yes        0.135658\n",
       "Name: proportion, dtype: float64\n",
       "ethnicity\n",
-      "white               0.558735\n",
-      "asian               0.136828\n",
-      "unknown             0.094603\n",
-      "hispanic / latin    0.072990\n",
-      "black               0.051244\n",
-      "other               0.028328\n",
-      "indian              0.019976\n",
-      "middle eastern      0.013529\n",
-      "pacific islander    0.011942\n",
-      "native american     0.011825\n",
+      "white        0.558735\n",
+      "not white    0.441265\n",
       "Name: proportion, dtype: float64\n",
       "job\n",
       "Other               0.270482\n",
@@ -841,98 +840,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sex\n",
-      "m    0.597618\n",
-      "f    0.402382\n",
+      "drinks\n",
+      "light    0.838371\n",
+      "heavy    0.104320\n",
+      "no       0.057309\n",
       "Name: proportion, dtype: float64\n",
-      "sex\n",
-      "m    0.597618\n",
-      "f    0.402382\n",
+      "drinks\n",
+      "light    0.838371\n",
+      "heavy    0.104320\n",
+      "no       0.057309\n",
       "Name: proportion, dtype: float64\n",
-      "['f' 'm']\n",
-      "Selected features from Chi2: ['age', 'height', 'body_type_fit', 'body_type_plus', 'job_Education', 'job_Healthcare', 'job_STEM', 'religion_atheism', 'diet_type_vegetarian', 'education_level_masters']\n",
-      "1    0.597628\n",
-      "0    0.402372\n",
+      "['heavy' 'light' 'no']\n",
+      "Selected features from Chi2: ['age', 'drugs_unknown', 'drugs_yes', 'religion_atheism', 'religion_islam', 'religion_other', 'smokes_yes', 'diet_type_vegan', 'diet_strictness_strict', 'education_level_high school']\n",
+      "1    0.333333\n",
+      "2    0.333333\n",
+      "0    0.333333\n",
       "Name: proportion, dtype: float64\n",
-      "Fitting 5 folds for each of 72 candidates, totalling 360 fits\n",
-      "Classification report for XGB Classifier:\n",
+      "Classification report for stacking:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.75      0.80      4819\n",
-      "           1       0.84      0.92      0.88      7156\n",
+      "           0       0.17      0.44      0.24      1187\n",
+      "           1       0.85      0.40      0.55      9542\n",
+      "           2       0.10      0.56      0.17       652\n",
       "\n",
-      "    accuracy                           0.85     11975\n",
-      "   macro avg       0.86      0.83      0.84     11975\n",
-      "weighted avg       0.85      0.85      0.85     11975\n",
+      "    accuracy                           0.42     11381\n",
+      "   macro avg       0.37      0.47      0.32     11381\n",
+      "weighted avg       0.74      0.42      0.49     11381\n",
       "\n",
       "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
       "Classification report for LR:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.81      0.83      0.82      4819\n",
-      "           1       0.88      0.86      0.87      7156\n",
+      "           0       0.20      0.53      0.29      1187\n",
+      "           1       0.89      0.14      0.24      9542\n",
+      "           2       0.08      0.86      0.15       652\n",
       "\n",
-      "    accuracy                           0.85     11975\n",
-      "   macro avg       0.85      0.85      0.85     11975\n",
-      "weighted avg       0.85      0.85      0.85     11975\n",
+      "    accuracy                           0.22     11381\n",
+      "   macro avg       0.39      0.51      0.23     11381\n",
+      "weighted avg       0.78      0.22      0.24     11381\n",
       "\n",
-      "Best Parameters: {'C': 1, 'penalty': 'l1', 'solver': 'liblinear'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:540: FitFailedWarning: \n",
-      "20 fits failed out of a total of 80.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "20 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
-      "    return fit_method(estimator, *args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1194, in fit\n",
-      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 67, in _check_solver\n",
-      "    raise ValueError(\n",
-      "ValueError: Solver lbfgs supports only 'l2' or None penalties, got l1 penalty.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "C:\\Users\\pedro\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1102: UserWarning: One or more of the test scores are non-finite: [0.84164014        nan 0.84520051 0.84525418 0.84583298        nan\n",
-      " 0.8457857  0.84584915 0.84588879        nan 0.84584122 0.84584591\n",
-      " 0.84578229        nan 0.84578229 0.84584841]\n",
-      "  warnings.warn(\n"
+      "Best Parameters: {'C': 0.01, 'class_weight': None, 'penalty': 'l2'}\n"
      ]
     }
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, StackingClassifier, ExtraTreesClassifier\n",
     "from sklearn.feature_selection import VarianceThreshold, RFE, SelectKBest, chi2\n",
     "import seaborn as sns\n",
     "from xgboost import XGBClassifier\n",
     "from collections import Counter\n",
-    "#from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "df = data[not_essay_cols].copy()\n",
-    "col_to_predict = 'sex'\n",
+    "col_to_predict = 'drinks'\n",
     "\n",
     "#remove rows where the target variable is unknown\n",
     "df = df[df[col_to_predict] != 'unknown']\n",
@@ -961,7 +934,7 @@
     "X_chi = x.copy()\n",
     "X_chi[X_chi < 0] = 0  # Only necessary if you have negative values\n",
     "\n",
-    "selector = SelectKBest(score_func=chi2, k=10)  # Keep top 10 features\n",
+    "selector = SelectKBest(score_func=chi2, k=10)  # Keep top k features\n",
     "X_chi_selected = selector.fit_transform(X_chi, y)\n",
     "selected_features = X_chi.columns[selector.get_support()]\n",
     "print(f\"Selected features from Chi2: {list(selected_features)}\")\n",
@@ -975,68 +948,73 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=24, stratify=y)\n",
     "\n",
+    "smote = SMOTE(random_state=42)\n",
+    "x_train, y_train = smote.fit_resample(x_train, y_train)\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "x_train[num_cols] = scaler.fit_transform(x_train[num_cols])\n",
     "x_test[num_cols] = scaler.transform(x_test[num_cols]) #never use fit transform on test data, because it will learn from train data\n",
     "\n",
     "print(pd.Series(y_train).value_counts(normalize=True))\n",
     "\n",
-    "# ----- XGB Classifier ----- #\n",
-    "counter = Counter(y_train)\n",
-    "majority = max(counter.values())\n",
-    "minority = min(counter.values())\n",
-    "imbalance_ratio = majority / minority\n",
     "\n",
-    "model = XGBClassifier(\n",
-    "    eval_metric='logloss',\n",
-    "    scale_pos_weight=imbalance_ratio\n",
-    ")\n",
+    "# ---------- Use stacking -------------- #\n",
     "\n",
-    "param_grid = {\n",
-    "    'n_estimators': [50, 100],\n",
-    "    'max_depth': [3, 5, 7],\n",
-    "    'learning_rate': [0.01, 0.1, 0.2],\n",
-    "    'subsample': [0.8, 1.0],\n",
-    "    'colsample_bytree': [0.8, 1.0]\n",
-    "}\n",
+    "base_models = [\n",
+    "    ('lr', LogisticRegression(class_weight='balanced', max_iter=500)),\n",
+    "    ('rf', RandomForestClassifier(n_estimators=50, class_weight='balanced')),\n",
+    "    ('et', ExtraTreesClassifier(n_estimators=50, class_weight='balanced')),\n",
+    "    ('xgb', XGBClassifier(eval_metric='logloss', use_label_encoder=False, n_estimators=50)),\n",
+    "]\n",
     "\n",
-    "gs = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='f1_macro', verbose=1, n_jobs=-1)    \n",
+    "meta_model = LogisticRegression()\n",
     "\n",
-    "gs.fit(x_train, y_train)\n",
-    "y_pred = gs.predict(x_test)\n",
-    "print('Classification report for XGB Classifier:')\n",
-    "print(classification_report(y_test, y_pred))\n",
+    "stack = StackingClassifier(estimators=base_models, final_estimator=meta_model, cv=5, n_jobs=-1, passthrough=True)\n",
+    "\n",
+    "stack.fit(x_train, y_train)\n",
+    "y_pred = stack.predict(x_test)\n",
+    "model_score = classification_report(y_test, y_pred)\n",
+    "print('Classification report for stacking:')\n",
+    "print(model_score)\n",
     "\n",
     "# --------- Logistic Regression ------------- #\n",
     "\n",
-    "model = LogisticRegression(class_weight='balanced', max_iter = 1000)\n",
+    "model = LogisticRegression(max_iter = 1000, solver = 'liblinear')\n",
     "\n",
     "param_grid = {\n",
     "    'C': [0.01, 0.1, 1, 10],             # Regularization strength\n",
     "    'penalty': ['l1', 'l2'],\n",
-    "    'solver': ['liblinear', 'lbfgs'] # Type of regularization\n",
+    "    'class_weight': [None, 'balanced']\n",
     "}\n",
     "\n",
-    "gs = GridSearchCV(model, param_grid, cv=5, scoring='f1_macro', verbose=1, n_jobs=-1)\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "gs = GridSearchCV(model, param_grid, cv=cv, scoring='f1_macro', verbose=1, n_jobs=-1)\n",
     "\n",
     "gs.fit(x_train, y_train)\n",
     "y_pred_model = gs.predict(x_test)\n",
     "model_score = classification_report(y_test, y_pred_model)\n",
     "print('Classification report for LR:')\n",
     "print(model_score)\n",
-    "print(\"Best Parameters:\", gs.best_params_)\n",
-    "\n"
+    "print(\"Best Parameters:\", gs.best_params_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n# ----- XGB Classifier ----- #\\ncounter = Counter(y_train)\\nmajority = max(counter.values())\\nminority = min(counter.values())\\nimbalance_ratio = majority / minority\\n\\nmodel = XGBClassifier(\\n    eval_metric=\\'logloss\\',\\n    scale_pos_weight=imbalance_ratio\\n)\\n\\nparam_grid = {\\n    \\'n_estimators\\': [50, 100],\\n    \\'max_depth\\': [3, 5, 7],\\n    \\'learning_rate\\': [0.01, 0.1, 0.2],\\n    \\'subsample\\': [0.8, 1.0],\\n    \\'colsample_bytree\\': [0.8, 1.0]\\n}\\n\\ngs = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring=\\'f1_macro\\', verbose=1, n_jobs=-1)    \\n\\ngs.fit(x_train, y_train)\\ny_pred = gs.predict(x_test)\\nprint(\\'Classification report for XGB Classifier:\\')\\nprint(classification_report(y_test, y_pred))\\n\\n# --------- Logistic Regression ------------- #\\n\\nmodel = LogisticRegression(max_iter = 1000, solver = \\'liblinear\\')\\n\\nparam_grid = {\\n    \\'C\\': [0.01, 0.1, 1, 10],             # Regularization strength\\n    \\'penalty\\': [\\'l1\\', \\'l2\\'],\\n    \\'class_weight\\': [None, \\'balanced\\']\\n}\\n\\ngs = GridSearchCV(model, param_grid, cv=5, scoring=\\'f1_macro\\', verbose=1, n_jobs=-1)\\n\\ngs.fit(x_train, y_train)\\ny_pred_model = gs.predict(x_test)\\nmodel_score = classification_report(y_test, y_pred_model)\\nprint(\\'Classification report for LR:\\')\\nprint(model_score)\\nprint(\"Best Parameters:\", gs.best_params_)\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#Stuff not used\n",
     "\n",
@@ -1102,15 +1080,64 @@
     "\n",
     "importances = pd.Series(rf.feature_importances_, index=x_train.columns)\n",
     "print(importances.sort_values(ascending=False).head(10))\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# ----- XGB Classifier ----- #\n",
+    "counter = Counter(y_train)\n",
+    "majority = max(counter.values())\n",
+    "minority = min(counter.values())\n",
+    "imbalance_ratio = majority / minority\n",
+    "\n",
+    "model = XGBClassifier(\n",
+    "    eval_metric='logloss',\n",
+    "    scale_pos_weight=imbalance_ratio\n",
+    ")\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100],\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0]\n",
+    "}\n",
+    "\n",
+    "gs = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='f1_macro', verbose=1, n_jobs=-1)    \n",
+    "\n",
+    "gs.fit(x_train, y_train)\n",
+    "y_pred = gs.predict(x_test)\n",
+    "print('Classification report for XGB Classifier:')\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# --------- Logistic Regression ------------- #\n",
+    "\n",
+    "model = LogisticRegression(max_iter = 1000, solver = 'liblinear')\n",
+    "\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10],             # Regularization strength\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'class_weight': [None, 'balanced']\n",
+    "}\n",
+    "\n",
+    "gs = GridSearchCV(model, param_grid, cv=5, scoring='f1_macro', verbose=1, n_jobs=-1)\n",
+    "\n",
+    "gs.fit(x_train, y_train)\n",
+    "y_pred_model = gs.predict(x_test)\n",
+    "model_score = classification_report(y_test, y_pred_model)\n",
+    "print('Classification report for LR:')\n",
+    "print(model_score)\n",
+    "print(\"Best Parameters:\", gs.best_params_)\n",
     "'''"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1122,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
